src/test/ui/error-codes/E0395.stderr
error[E0658]: comparing raw pointers inside static (see issue #53020)
  --> $DIR/E0395.rs:6:29
   |
LL | static BAZ: bool = unsafe { (&FOO as *const i32) == (&BAR as *const i32) };
   |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(const_compare_raw_pointers)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
